# causal-av-tokenizer

./: README.md  pyproject.toml
data/: manifest.csv
outputs/: tokenizer_eval.csv
scripts/: evaluate_av_ablations.py  evaluate_checkpoints.py  inspect_dataset.py  make_manifest.py  train_audio_autoencoder.py  train_av_autoencoder.py  train_video_autoencoder.py  visualize_batch.py  visualize_reconstructions.py
src/avtokenizer/: __init__.py  audio_autoencoder.py  av_autoencoder.py  data.py  video_autoencoder.py
tests/: test_windowing.py
